--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.4.1"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-recaptcha": "^3.2.0",
+    "puppeteer-extra-plugin-stealth": "^2.6.5"
   }
 }
